--- a/Web/Views/Category/GetAllCategory.cshtml
+++ b/Web/Views/Category/GetAllCategory.cshtml
@@ -1,7 +1,6 @@
 ﻿@model IEnumerable<Application.Entities.Category>
-<div class="bg-gray-50 dark:bg-gray-900">
-    <!-- Main content -->
-    <main class="p-6 md:ml-32 bg-gray-50 dark:bg-gray-900 min-h-screen w-full">
+<div class="p-6 sm:ml-64 bg-gray-50 min-h-screen">
+    <div class="flex flex-col flex-1 overflow-hidden">
         <div>
             @if (TempData["Category"] != null)
             {
@@ -121,8 +120,8 @@
                         <label for="category-name" class="block text-sm font-medium text-gray-800 dark:text-gray-100">Tên danh mục</label>
                         <input type="text"
                                id="category-name"
-                               name="type_name" 
-                        class="w-full p-2 mt-1 text-sm text-gray-800 border border-gray-300 rounded-lg dark:text-white focus:ring-blue-500 focus:border-blue-500" required/>
+                               name="type_name"
+                               class="w-full p-2 mt-1 text-sm text-gray-800 border border-gray-300 rounded-lg dark:text-white focus:ring-blue-500 focus:border-blue-500" required />
                     </div>
                     <div class="flex justify-end">
                         <button type="button"
@@ -167,5 +166,5 @@
                 </form>
             </div>
         </div>
-    </main>
+    </div>
 </div>
