--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 </head>
-<body class="flex flex-col min-w-screen w-full">
+<body class="flex flex-col min-h-screen w-full">
     @if (!User.IsInRole("Admin"))
     {
         <header class="bg-gray-200 shadow-md w-full">
@@ -93,7 +93,7 @@
                     }
                     else
                     {
-                        <a asp-action="Login" asp-controller="Account" class="text-gray-500 hover:text-gray-900 font-medium w-32">Sign In</a>
+                        <a asp-action="Login" asp-controller="Account" class="text-gray-500 hover:text-gray-900 font-medium w-32 pl-8">Sign In</a>
                         <div class="h-6 w-px bg-gray-300"></div>
                         <a asp-action="Register" asp-controller="Account" class="text-gray-500 hover:text-gray-900 font-medium w-32">Sign Up</a>
                     }
@@ -277,11 +277,9 @@
             </div>
         </aside>
     }
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+    <main role="main" class="pb-3 w-full h-full">
+        @RenderBody()
+    </main>
     @if (!User.IsInRole("Admin"))
     {
         <footer class="px-6 py-12">
@@ -354,9 +352,9 @@
     }
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
-@*     <script src="~/js/Category.js"></script>
-    <script src="~/js/javascript.js"></script> *@
-@*     <script src="~/js/Product.js"></script> *@
+        <script src="~/js/Category.js"></script>
+    <script src="~/js/javascript.js"></script>
+    @*     <script src="~/js/Product.js"></script> *@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
